# gendiff

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: Flake8-WPS.yml  Tests and lints.yml  test-coverage.yml  tests and lints.yml
gendiff/: __init__.py  cli.py  constants.py  content_parser.py  diff_sorter.py  differ.py  file_reader.py  inter_repr.py  key_states_constants.py  parser.py  shell_parser.py
gendiff/formatters/: formats.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  shell_parser.py  stylish.py
tests/: conftest.py  test_gendiff.py
