[tool.poetry]
name = "hexlet-code"
version = "1.0"
description = ""
authors = ["idilettant <dedenev1985@gmail.com>"]
license = "MIT"
packages = [
    { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.2"
pre-commit = "^2.11.1"
pytest = "^6.2.2"
pytest-cov = "^2.12.1"
mypy = "^0.910"
types-PyYAML = "^5.4.6"
types-setuptools = "^57.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
